# wisp

./: .env.example  .gitignore  Deleteme.txt  Makefile  README.md  docker-compose.yml  pyproject.toml  vercel.json
apps/api/: config.py  main.py
apps/api/dependencies/: auth.py  rate_limit.py  services.py
apps/api/routes/: api.py
apps/api/schemas/: requests.py  responses.py
apps/launch-site/: README.md  app.js  firebase.config.example.js  firebase.config.js  index.html  styles.css
docs/: api_key_and_platform_roadmap.md  architecture.md
scripts/: benchmark.py
tests/: conftest.py
tests/e2e/: test_search_extract_vertical.py
tests/fixtures/: research_gold.json
tests/integration/: test_academic_pipeline.py  test_api_contracts.py  test_crawl_boundary.py  test_ranking.py
tests/unit/: test_auth.py  test_cache.py  test_dedup.py  test_rate_limit.py  test_scoring.py  test_url_utils.py
