[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wisp"
version = "0.1.0"
description = "WISP - Free self-hostable web research platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "tenacity>=8.5",
  "trafilatura>=1.12",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "rank-bm25>=0.2.2",
  "prometheus-client>=0.20",
  "orjson>=3.10"
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.0"]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "anyio>=4.4",
  "ruff>=0.6",
  "mypy>=1.11"
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]
